# ai_agent_finance

./: .gitignore  agent.py  cli_agent.py  config.py  main.py  pyproject.toml  reflector_fixed.jsonl  requirements.txt  run_agent.py  setup.py  test_edgar.py  trades.db
investment_agent/: __init__.py  agent.py  config.py  main.py  run_agent.py  trades.db
investment_agent.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
investment_agent/datasets/: banksRAG.docx
investment_agent/prompts/: __init__.py  investment_advisor.py
investment_agent/tools/: __init__.py  bank_rag_tools.py  bybit_api.py  pdf_analyzer.py  rag_analyzer.py  registry.py  sec_downloader.py  trade_tracker.py
prompts/: __init__.py  investment_advisor.py
tools/: __init__.py  company_tools.py  edgar_tools.py  market_analysis.py  pdf_analyzer.py  registry.py  sec_downloader.py  trade_tracker.py  utils.py
