[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "investment_agent"
version = "0.1.0"
description = "Инвестиционный агент для анализа финансовых данных"
authors = [{name = "Your Name", email = "your.email@example.com"}]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "openai>=1.0.0",
    "agents>=0.1.0",
    "requests>=2.25.0",
    "pandas>=1.2.0",
    "pymupdf>=1.18.0"  # Для работы с PDF (опционально)
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0"
]

[tool.setuptools]
packages = ["investment_agent", "investment_agent.tools", "investment_agent.prompts"]